--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 variables:
   IMAGE_TAG: $CI_COMMIT_BRANCH-$CI_COMMIT_SHORT_SHA
-  REGISTRY_HOST: "gitlab.kubernetes.technology"
 
 stages:
   - build
@@ -33,9 +32,8 @@ docker-build:
         echo "Waiting for docker daemon..."
         sleep 1
       done
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $REGISTRY_HOST
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_SERVER_HOST
   script:
-    - export IMAGE_NAME="$REGISTRY_HOST/$CI_PROJECT_PATH"
-    - docker build -t "$IMAGE_NAME:$IMAGE_TAG" .
-    - docker push "$IMAGE_NAME:$IMAGE_TAG"
+    - docker build -t "$CI_SERVER_HOST/$CI_PROJECT_PATH:$IMAGE_TAG" .
+    - docker push "$CI_SERVER_HOST/$CI_PROJECT_PATH:$IMAGE_TAG"
 
