--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,8 @@ docker-build:
         echo "Waiting for docker daemon..."
         sleep 1
       done
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_SERVER_HOST
   script:
-    - docker build -t "$CI_REGISTRY_IMAGE:$IMAGE_TAG" .
-    - docker push "$CI_REGISTRY_IMAGE:$IMAGE_TAG"
+    - docker build -t "$CI_SERVER_HOST/$CI_PROJECT_PATH:$IMAGE_TAG" .
+    - docker push "$CI_SERVER_HOST/$CI_PROJECT_PATH:$IMAGE_TAG"
 
